# dialogue_state_machine

./: CMakeLists.txt  package.xml  setup.py
common/src/dialogue_state_machine/: dialogue_states.py
ros/doc/: README.md
ros/launch/: dialogue_state_machine.launch
ros/scripts/: dialogue_state_machine_node
ros/src/dialogue_state_machine_ros/: dialogue_state_machine_node.py
