<?xml version="1.0"?>
<package>
 <name>dialogue_state_machine</name>
 <version>1.0.0</version>
 <description>
 TODO!
 </description>

 <license>GPLv3</license>

 <author email="joao.barroca@tecnico.ulisboa.pt">Joao Barroca</author>
 <maintainer email="joao.barroca@tecnico.ulisboa.pt">Joao Barroca</maintainer>

 <buildtool_depend>catkin</buildtool_depend>

 <build_depend>TODO</build_depend>

 <run_depend>TODO</run_depend>

</package>
